--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 ###### Database Properties  ###########################################
+############# Database Properties ###########################################
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/spring-reddit-clone?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=Africa/Nairobi&useLegacyDatetimeCode=false
 spring.datasource.username=root
 spring.datasource.password=pass1234
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.initialize=true
+spring.datasource.initialization-mode=always
 spring.jpa.show-sql=true
 ############# Mail Properties ###########################################
 spring.mail.host=smtp.mailtrap.io
@@ -12,3 +14,5 @@ spring.mail.port=25
 spring.mail.username=bfcb6385b856df
 spring.mail.password=8db961a3bbf599
 spring.mail.protocol=smtp
+############ JWT Properties #####################
+jwt.expiration.time=90000
