--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.reddit</groupId>
 	<artifactId>spring-reddit-clone</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>2.0.2</version>
 	<name>spring-reddit-clone</name>
 	<description>Clone project testing Spring Boot</description>
 
@@ -115,6 +115,11 @@
 			<artifactId>mapstruct</artifactId>
 			<version>${org.mapstruct.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>2.0.1.Final</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -126,7 +131,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.5.1</version> <!-- or newer version -->
+				<version>3.8.1</version> <!-- or newer version -->
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
